@@ -13,18 +13,19 @@
 # Possible entry formats are:
 #
 #   programmer
-#       id     = <id1> [, <id2> [, <id3>] ...] ;  # <idN> are quoted strings
-#       desc   = <description> ;                  # quoted string
-#       type   = par | stk500 | avr910;           # programmer type
-#       vcc    = <num1> [, <num2> ... ] ;         # pin number(s)
-#       reset  = <num> ;                          # pin number
-#       sck    = <num> ;                          # pin number
-#       mosi   = <num> ;                          # pin number
-#       miso   = <num> ;                          # pin number
-#       errled = <num> ;                          # pin number
-#       rdyled = <num> ;                          # pin number
-#       pgmled = <num> ;                          # pin number
-#       vfyled = <num> ;                          # pin number
+#       id       = <id1> [, <id2> [, <id3>] ...] ;  # <idN> are quoted strings
+#       desc     = <description> ;                  # quoted string
+#       type     = par | stk500 | avr910;           # programmer type
+#       baudrate = <num> ;                          # baudrate for avr910-programmer
+#       vcc      = <num1> [, <num2> ... ] ;         # pin number(s)
+#       reset    = <num> ;                          # pin number
+#       sck      = <num> ;                          # pin number
+#       mosi     = <num> ;                          # pin number
+#       miso     = <num> ;                          # pin number
+#       errled   = <num> ;                          # pin number
+#       rdyled   = <num> ;                          # pin number
+#       pgmled   = <num> ;                          # pin number
+#       vfyled   = <num> ;                          # pin number
 #     ;
 #
 #   part
